# eyft

./: README.md  app.py  pyproject.toml
conf/base/: logging.yml
conf/base/catalog/: data_processing.yml  feature_engineering.yml  feature_selection.yml
conf/base/parameters/: data_processing.yml  feature_engineering.yml  feature_selection.yml  model_selection.yml  shared.yml
docs/source/: conf.py  index.rst
notebooks/: data_processing.ipynb  geolocate.ipynb
src/: requirements.txt  setup.py
src/eyft/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/eyft/archive/: processing.py
src/eyft/dashboard/: data_processing_app.py  main.py
src/eyft/pipelines/data_processing/: README.md  nodes.py  pipeline.py  processor.py
src/eyft/pipelines/feature_engineering/: README.md  nodes.py  pipeline.py  transform.py
src/eyft/pipelines/feature_selection/: README.md  nodes.py  pipeline.py  selector.py
src/eyft/pipelines/model_selection/: modeler.py  nodes.py  pipeline.py
src/eyft/utils/: README.md  constants.py  generic.py  geo.py  models.py  processing.py
src/tests/: test_run.py
src/tests/pipelines/data_processing/: conftest.py  test_processor.py
src/tests/pipelines/feature_engineering/: conftest.py  test_transform.py
src/tests/pipelines/feature_selection/: conftest.py  test_selection.py
src/tests/pipelines/model_selection/: conftest.py  test_modeler.py
src/tests/utils/: conftest.py  test_processing.py
tabs/: data_processing.py  data_upload.py  feature_selection.py
